<resources>
    <string name="app_name">밍굴맹굴</string>

    <string name="habit_adding">습관 추가하기</string>
    <string name="habit_input_name">습관 설정</string>
    <string name="habit_input_name_hint">습관을 써주세요.</string>
    <string name="habit_input_week">요일 설정</string>
    <string name="alarm">알림</string>
    <string name="alarm_time">알림시간</string>
    <string name="time_selection">시간 선택</string>


    <string-array name="week">
        <item>일</item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
        <item>토</item>
    </string-array>

    <string name="sunday">일</string>
    
    <!-- home -->
    <string name="home_title_prefix">총 </string>
    <string name="home_title_suffix">일 쌓였어요</string>
    
    <!-- on-boarding -->
    <string name="btn_next">다음</string>
    <string name="btn_start">바로 시작!</string>
    <string name="btn_start2">준비되었어요</string>

    <string name="main1">게으름뱅이에서\n탈출하고 싶다면\n잘오셨습니다</string>
    <string name="sub1">밍굴맹굴은 당신의 고민을\n바로 해결해줄 해결사!</string>
    <string name="main2">습관미루기를\n조금씩 줄여볼까요?</string>
    <string name="sub2">당장 줄일 수 있는 목표를 만들고\n미루지 않도록 노력해보세요</string>
    <string name="main3">미룬 일수를 알려주는\n습관형성 서비스</string>
    <string name="sub3">달성하지 않고 넘어가 버린\n습관을 알려줄게요!</string>

    <string name="main2_1">오늘 해야할 습관이\n젤리로 쌓여요</string>
    <string name="main2_2">습관을 할 때마다\n젤리가 한번에 없어져요</string>
    <string name="main2_3">얼마나 많이 미뤘든\n당장 행동하세요</string>
    <string name="sub2_1">미룬 일수가 늘어날 수록\n젤리도 점점 쌓여요</string>
    <string name="sub2_2">할 일이 얼마나 쌓였는지\n확인하고 없애보세요!</string>
    <string name="sub2_3">밍굴맹굴과 함께라면 나태했던\n어제와는 달리 한걸음 더 나아갈 수 있어요</string>

    <string name="login_main">더 이상의 게으름은\n용납할 수 없다. </string>
    <string name="login_sub">여태 안했지만 오늘은 할 수 있도록\n도와주는 밍굴맹굴!</string>
    <string name="login_kakao">카카오톡으로 로그인</string>
    
    <string name="nickname_title">뭐라고 부르면 될까요?</string>
    <string name="nickname_hint">닉네임을 입력하세요</string>
    <string name="nickname_btn">확인</string>
</resources>