<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.nexters.presentation.viewmodel.JoinViewModel" />
        
        <import type="android.text.TextUtils" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="130dp"
            android:text="@string/nickname_title"
            android:fontFamily="@font/pretendard_medium"
            android:textSize="@dimen/xxl"
            android:textColor="@color/gray_800">
        </TextView>

        <EditText
            android:id="@+id/et_nickname"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_input"
            android:textColorHint="@color/gray_600"
            android:hint="@string/nickname_hint"
            android:padding="16dp"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/gray_800"
            android:textSize="@dimen/m"
            android:text="@={viewModel.state().nickname}"
            android:inputType="textMultiLine|textNoSuggestions"
            >

        </EditText>

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn1_height"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/bg_btn_default"
            android:text="@string/nickname_btn"
            android:fontFamily="@font/pretendard_bold"
            android:textSize="@dimen/r"
            android:textColor="@drawable/text_btn_default"
            android:gravity="center"
            android:enabled="@{!TextUtils.isEmpty(viewModel.state().nickname)}">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>