<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

        <ImageView
            android:id="@+id/iv_bubble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/login_bubble_group"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="@dimen/padding_medium">
        </ImageView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/iv_bubble"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="@dimen/padding_medium"
            >

            <TextView
                android:id="@+id/tv_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/login_main"
                android:fontFamily="@font/pretendard_bold"
                android:textSize="@dimen/xxl"
                android:textColor="@color/white">

            </TextView>

            <TextView
                android:id="@+id/tv_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_main"
                android:layout_marginTop="16dp"
                android:text="@string/login_sub"
                android:fontFamily="@font/pretendard_bold"
                android:textSize="@dimen/s"
                android:textColor="@color/white">

            </TextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_login_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn1_height"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@drawable/bg_btn_login"
                >

                <ImageView
                    android:id="@+id/iv_kakao"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ico_kakao"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="@dimen/padding_medium"
                    >

                </ImageView>

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/login_kakao"
                    android:fontFamily="@font/pretendard_medium"
                    android:textSize="@dimen/r"
                    android:textColor="@android:color/black">

                </TextView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>